# aoc-template

./: Cargo.toml  README.md  solution.yaml
puzzle_input/: day_00.txt
src/: advent.rs  lib.rs  main.rs
src/day_01/: part_2.rs
src/day_01/input/: puzzle.txt  test_2.txt
src/next_day/: mod.rs  part_1.rs
